Fix font issue on mobile phones

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Moderat", Helvetica, Arial, sans-serif;
+}
+
 h1,
 h2 {
   margin: 0 0 16px;
